<resources>
    <string name="app_name">iTuness</string>
    <string name="singer">Singer</string>
    <string name="album">Album</string>
    <string name="song">Song</string>
    <string name="albumPicture">AlbumImage</string>
    <string name="searchView">search</string>
    <string name="startButton">PLAY</string>
    <string name="stopButton">STOP</string>
    <string name="pauseButton">PAUSE</string>
    <string name="recent">Recent Search</string>
</resources>
